commit translated contents

--- a/docs/visual-basic/misc/bc30948.md
+++ b/docs/visual-basic/misc/bc30948.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30948
 ms.assetid: 982bf6d2-ce62-4451-8a23-82dacf8ee100
-ms.openlocfilehash: 1ad6842e94138c16dc661c3a155f4c0b8880a7e5
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: c4ce09682a54a9cada116e989348b5413e7ba404
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54528123"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57201714"
 ---
 # <a name="unscheduled-fiber"></a>예약되지 않은 파이버입니다.
 실제 스레드에 예약되지 않은 논리 파이버에 있기 때문에 디버거에서 식을 계산할 수 없습니다. 이 오류는 프로세스가 파이버를 사용하여 SQL Server에서 실행 중인 경우에 발생할 수 있습니다.  
@@ -26,5 +26,6 @@ ms.locfileid: "54528123"
 -   파이버가 실제 스레드에 예약되어 있는지 확인합니다.  
   
 ## <a name="see-also"></a>참고자료
-- [SQL 디버깅](https://msdn.microsoft.com/library/f27c17e6-1d90-49f2-9fc0-d02e6a27f109)
+
+- [TRANSACT-SQL 디버거](/sql/ssms/scripting/transact-sql-debugger)
 - [Visual Studio의 디버깅](/visualstudio/debugger/debugging-in-visual-studio)
