--- a/docs/visual-basic/misc/bc30995.md
+++ b/docs/visual-basic/misc/bc30995.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC30995
 ms.assetid: eed62684-66db-4fdb-9da7-f1407a55b172
-ms.openlocfilehash: d7d6122d5bb2024004d9a0c659b3afb174b8cf67
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: a93ce4d796e84cde0b2f6625134ec5a5896d7f7c
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54594033"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57201484"
 ---
 # <a name="leading--or--cannot-appear-in-a-constant-expression"></a>선행 '.' 또는 '!'는 상수 식에 표시할 수 없습니다.
 멤버 액세스 (.) 및 사전 멤버 액세스 (!) 대부분의 경우 상수 식을 포함 하 여 멤버를 포함 하는 요소를 지정 하는 식이 필요 합니다. 다음 선언은 올바르지 않습니다.  
@@ -30,5 +30,5 @@ Const c As String = .name
   
 ## <a name="see-also"></a>참고자료
 - [개체 이니셜라이저: 명명 된 형식과 익명 형식](../../visual-basic/programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
-- [방법: 익명 형식 (Visual Basic)의 인스턴스를 선언 합니다.](https://msdn.microsoft.com/library/119f616c-9bcd-4731-ac00-4285be5959f7)
+- [익명 형식 (Visual Basic)](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
 - [Const 문](../../visual-basic/language-reference/statements/const-statement.md)
