--- a/docs/visual-basic/misc/bc36577.md
+++ b/docs/visual-basic/misc/bc36577.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36577
 ms.assetid: c16c5f56-fd41-4058-9d43-35e5c0f7bf03
-ms.openlocfilehash: 6fc02e919b73015ba9485941f3746f45ebe72557
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 64b4988ad8e2078ec63509a9832e3665d32cb676
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54570657"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57201315"
 ---
 # <a name="anonymous-type-initializers-are-not-valid-in-debug-windows"></a>디버그 창에서는 무명 형식 이니셜라이저를 사용할 수 없습니다.
 디버깅 세션 중 **조사식** 또는 **직접 실행** 창에 무명 형식 이니셜라이저가 입력되었습니다. 무명 형식 이니셜라이저는 디버깅 창에서 사용할 수 없습니다.  
@@ -25,5 +25,5 @@ ms.locfileid: "54570657"
   
 ## <a name="see-also"></a>참고자료
 - [익명 형식](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [자세히 보기: 만약... 직접 실행 창에서 코드를 테스트](https://msdn.microsoft.com/library/3613a627-09a4-44e1-9cc2-f2a29f4e0744)
+- [직접 실행 창-Visual Studio](/visualstudio/ide/reference/immediate-window)
 - [Visual Basic 응용 프로그램 디버깅](../../visual-basic/developing-apps/debugging.md)
