--- a/docs/visual-basic/misc/bc31028.md
+++ b/docs/visual-basic/misc/bc31028.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31028
 ms.assetid: 2cb22e75-5ee2-4e07-afc0-680a0bd543d4
-ms.openlocfilehash: cdac00c7f78db4f2e17766830dfbd0076ec23587
-ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
+ms.openlocfilehash: e541c001768d5ea6c0af9fd5b61a17fc56768818
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/30/2019
-ms.locfileid: "55276538"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200483"
 ---
 # <a name="unable-to-sign-file-filename-error"></a>파일에 서명할 수 없습니다. '\<파일 이름 >': \<오류 >
 지정된 파일에 서명하는 동안 오류가 발생했습니다. 이 오류가 발생한 이유는 여러 가지가 있을 수 있습니다.  
@@ -36,5 +36,5 @@ ms.locfileid: "55276538"
 3.  파일에 대한 `Write` 권한이 있는지 확인합니다.  
   
 ## <a name="see-also"></a>참고자료
-- [서명 도구 (Signcode.exe) 파일](https://msdn.microsoft.com/library/2d299154-34ea-41ba-ad12-17075bb7e1db)
-- [배포 및 Authenticode 서명](https://msdn.microsoft.com/library/ecc3f059-da2e-445b-9b87-5b2978e2f8b2)
+- [SignTool.exe(서명 도구)](../../framework/tools/signtool-exe.md)
+- [방법: 응용 프로그램 및 배포 매니페스트 서명](/visualstudio/ide/how-to-sign-application-and-deployment-manifests)
