--- a/docs/visual-basic/misc/bc31072.md
+++ b/docs/visual-basic/misc/bc31072.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC31072
 ms.assetid: ae89a9f1-d62b-4b83-b225-d4ff97d6266f
-ms.openlocfilehash: 628b10b2694db194f1142dedebf1aec69655b714
-ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
+ms.openlocfilehash: 08df60c8aa7e1d83e61c0ef0ffe1ab1dff5632a7
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/30/2019
-ms.locfileid: "55278748"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200132"
 ---
 # <a name="warning-treated-as-error-error"></a>경고가 오류로 처리: \<오류 >
 **경고를 오류로 처리** 옵션을 설정한 상태에서 컴파일된 어셈블리를 실행할 때 경고가 발생했습니다.  
@@ -27,5 +27,5 @@ ms.locfileid: "55278748"
   
 ## <a name="see-also"></a>참고자료
 - [/warnaserror(Visual Basic)](../../visual-basic/reference/command-line-compiler/warnaserror.md)
-- [속성 페이지 빌드 페이지](https://msdn.microsoft.com/library/1e499ee7-5bd6-44ca-a048-82c357fafaa7)
-- [배포 프로젝트 속성 대화 상자, 구성 속성, 빌드](https://msdn.microsoft.com/library/45cf8bf4-56aa-4f2d-bdef-908c7010d7fc)
+- [속성 페이지 빌드 페이지](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2010/zxbs6ywz(v=vs.100))
+- [배포 프로젝트 속성 대화 상자, 구성 속성, 빌드](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2010/1befw7hy(v=vs.100))
