--- a/docs/visual-basic/misc/bc33032.md
+++ b/docs/visual-basic/misc/bc33032.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC33032
 ms.assetid: 877f626f-7aa1-41d8-b7ca-eb4337d012d1
-ms.openlocfilehash: 259cfb44328b650839d48290939dc113bdf00ed8
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 8bb62b372549e3c0a3ab7355b1ab56fefd6a98bd
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54637442"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57203232"
 ---
 # <a name="conversion-operators-cannot-convert-from-object"></a>변환 연산자는 Object에서 변환할 수 없습니다.
 변환 연산자가 [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md)의 매개 변수와 함께 선언되었습니다.  
@@ -32,4 +32,4 @@ ms.locfileid: "54637442"
 - [Operator 문](../../visual-basic/language-reference/statements/operator-statement.md)
 - [방법: 연산자 정의](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
 - [방법: 변환 연산자를 정의 합니다.](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
-- [유니버설 데이터 형식 개체(Visual Basic)](https://msdn.microsoft.com/library/5315bf21-2b22-45ab-98cd-5631dffbcb2f)
+- [개체 데이터 형식 (Visual Basic)](../language-reference/data-types/object-data-type.md)
