--- a/docs/visual-basic/misc/bc36595.md
+++ b/docs/visual-basic/misc/bc36595.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36595
 ms.assetid: 4e7cc11e-f53d-4481-afb4-653a81d54483
-ms.openlocfilehash: a3d46cd71f0b34b277e16ba603d620b572fb2609
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 04a4e1b8dd9e65a7002f4f025bf6b5757a00e0e3
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54683179"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200925"
 ---
 # <a name="method-cannot-contain-both-an-on-error-goto-statement-and-a-lambda-or-query-expression"></a>메서드에는 'On Error GoTo' 문과 함께 람다 또는 쿼리 식을 사용할 수 없습니다.
 메서드에 `On Error Goto` 문과 람다 식 또는 LINQ 쿼리가 둘 다 포함되어 있습니다. 람다 식 또는 LINQ 쿼리와 함께 `On Error Goto` 문을 메서드에 포함할 수 없습니다.  
@@ -24,7 +24,7 @@ ms.locfileid: "54683179"
 1.  `On Error Goto` 문을 사용하는 예외 처리 코드를 `Try...Catch` 문으로 바꿉니다.  
   
 ## <a name="see-also"></a>참고자료
-- [예외 처리 (Visual Basic) 소개](https://msdn.microsoft.com/library/9792f16a-0cd2-40bd-ace2-f7a4344c0e52)
+- [.NET의 예외 처리 및 Throw](../../standard/exceptions/index.md)
 - [Try...Catch...Finally 문](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)
 - [Visual Basic의 LINQ 소개](../../visual-basic/programming-guide/language-features/linq/introduction-to-linq.md)
 - [람다 식](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
