--- a/docs/visual-basic/misc/bc36627.md
+++ b/docs/visual-basic/misc/bc36627.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC36627
 ms.assetid: c10fc492-9c2d-4150-9779-8234f57b6138
-ms.openlocfilehash: 366b4b12107fd92e6108ea5ab0ef6347db15fd62
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 6d2859cd0ea9d4cdf7b839c011e667923ec15344
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54637062"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57202784"
 ---
 # <a name="evaluation-of-lambda-expressions-is-not-valid-in-the-debugger"></a>디버거에서 람다 식 계산이 올바르지 않습니다.
 디버깅 세션 중 **조사식** 또는 **직접 실행** 창에 람다 식이 입력되었습니다. 람다 식을 디버그 창에서 사용할 수 없습니다.  
@@ -25,5 +25,5 @@ ms.locfileid: "54637062"
   
 ## <a name="see-also"></a>참고자료
 - [람다 식](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
-- [자세히 보기: 만약... 직접 실행 창에서 코드를 테스트](https://msdn.microsoft.com/library/3613a627-09a4-44e1-9cc2-f2a29f4e0744)
+- [직접 실행 창-Visual Studio](/visualstudio/ide/reference/immediate-window)
 - [Visual Basic 응용 프로그램 디버깅](../../visual-basic/developing-apps/debugging.md)
