--- a/docs/visual-basic/misc/bc36634.md
+++ b/docs/visual-basic/misc/bc36634.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - BC36634
 ms.assetid: ed751d8d-11b7-4210-97e0-0319edff8c34
-ms.openlocfilehash: f0ca686201f6dc6c8060e19e8df71b20ade76710
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 6e63ae9c0edbf343e9c3e0fd7ced2bcff7d98359
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54521090"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200873"
 ---
 # <a name="attributes-cannot-be-applied-to-parameters-of-lambda-expressions"></a>람다 식의 매개 변수에는 특성을 적용할 수 없습니다.
 특성을 람다 식 정의의 매개 변수에 적용했습니다. 이는 지원되지 않습니다. 다음 코드는 이 오류를 생성합니다.  
   
 ```vb  
-Sub LambaAttribute()  
+Sub LambdaAttribute()  
     ' Not valid.  
     Dim add1 = _  
     Function(<System.Runtime.InteropServices.InAttribute()> m As Integer) _  
