--- a/docs/visual-basic/misc/bc42001.md
+++ b/docs/visual-basic/misc/bc42001.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42001
 ms.assetid: 31e7c383-894e-416c-b834-3688cc340ccf
-ms.openlocfilehash: 3207667dff8554e36f5a8b762be1beaa20be78aa
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: d73f986801ba4cf54a187d0ee4abe2b9233a937f
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54729368"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200028"
 ---
 # <a name="classinitialize-event-is-no-longer-supported"></a>'Class_Initialize' 이벤트는 더 이상 지원되지 않습니다.
 'Class_Initialize' 이벤트는 더 이상 지원되지 않습니다. 클래스를 초기화하려면 'Sub New'를 사용합니다.  
@@ -28,6 +28,5 @@ ms.locfileid: "54729368"
 -   하나 이상의 `Sub` 프로시저 이름을 `New` 로 선언하여 클래스를 초기화합니다. 클래스 인스턴스를 새로 만들 때`Sub New` 가 호출됩니다.  
   
 ## <a name="see-also"></a>참고자료
-- [Visual Basic의 Class_Initialize 변경](https://msdn.microsoft.com/library/2cd023cf-2869-4836-b08d-43822294beeb)
-- [Visual Basic 6.0 사용자를 위한 클래스](https://msdn.microsoft.com/library/d625222c-cd32-4c8d-b25c-ea71729b88b7)
-- [생성자](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
+
+- [생성자](../programming-guide/concepts/object-oriented-programming.md#constructors)
