--- a/docs/visual-basic/misc/bc42002.md
+++ b/docs/visual-basic/misc/bc42002.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42002
 ms.assetid: 11eeac74-666d-4b23-81bc-b1691290ddd0
-ms.openlocfilehash: ccfed85d0d95abc54fc699c00383e0c63aa49819
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 2b0b0a17a56d04e09cdf7812114317e744285b23
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54548870"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200054"
 ---
 # <a name="classterminate-event-is-no-longer-supported"></a>'Class_Terminate' 이벤트는 더 이상 지원되지 않습니다.
 'Class_Terminate' 이벤트는 더 이상 지원되지 않습니다. 'Sub Finalize'을 사용하여 리소스를 확보합니다.  
@@ -28,6 +28,6 @@ ms.locfileid: "54548870"
 -   `Sub` 라는 `Finalize` 프로시저를 선언하여 클래스를 종료합니다. 인스턴스에 대한 활성 참조가 더 이상 없음을 가비지 수집기가 감지하면`Sub Finalize` 가 호출됩니다.  
   
 ## <a name="see-also"></a>참고자료
-- [Visual Basic 6.0 사용자를 위한 클래스](https://msdn.microsoft.com/library/d625222c-cd32-4c8d-b25c-ea71729b88b7)
-- [생성자](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
+
+- [생성자](../programming-guide/concepts/object-oriented-programming.md#constructors)
 - [Dispose 메서드 구현](~/docs/standard/garbage-collection/implementing-dispose.md)
