--- a/docs/visual-basic/misc/bc42200.md
+++ b/docs/visual-basic/misc/bc42200.md
@@ -7,12 +7,12 @@ f1_keywords:
 helpviewer_keywords:
 - BC42200
 ms.assetid: c79d672e-638c-4d87-9b93-edf12ce84a52
-ms.openlocfilehash: 50a37daa377e869ec4413134ea41a4f8169f0170
-ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
+ms.openlocfilehash: 62b4b12408b67f4fbfc764c3228290567ef92d2c
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/30/2019
-ms.locfileid: "55275395"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200743"
 ---
 # <a name="method-methodname-has-a-link-demand-but-overrides-or-implements-the-following-methods-which-do-not-have-a-link-demand-a-security-hole-may-exist"></a>메서드 '\<methodname >' 링크 요청을 재정의 하거나 링크 요청이 없는 다음 메서드를 구현 합니다. 보안 허점이 있을 수도 있습니다.
 보안 링크 요청 작업이 메서드에 추가되었습니다. 그러나 메서드가 링크 요청이 없는 메서드를 재정의하거나 구현합니다. 따라서 재정의되거나 구현된 메서드를 권한 없이 호출할 수 있으며, 보안 문제가 발생할 수 있습니다.  
@@ -29,4 +29,4 @@ ms.locfileid: "55275395"
 
 - [링크 요청](../../framework/misc/link-demands.md)
 - [Demand와 LinkDemand](../../framework/misc/securing-wrapper-code.md#demand-vs-linkdemand)
-- [보안 최적화](https://msdn.microsoft.com/library/cf255069-d85d-4de3-914a-e4625215a7c0)
+- [보안 최적화](https://docs.microsoft.com/previous-versions/dotnet/netframework-4.0/ett3th5b(v=vs.100))
