commit bilingual contents

--- a/docs/visual-basic/misc/bc36577.md
+++ b/docs/visual-basic/misc/bc36577.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC36577
 ms.assetid: c16c5f56-fd41-4058-9d43-35e5c0f7bf03
-ms.openlocfilehash: 6fc02e919b73015ba9485941f3746f45ebe72557
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 64b4988ad8e2078ec63509a9832e3665d32cb676
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54570657"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57201315"
 ---
-# <a name="anonymous-type-initializers-are-not-valid-in-debug-windows"></a><span data-ttu-id="72074-102">디버그 창에서는 무명 형식 이니셜라이저를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="72074-102">Anonymous type initializers are not valid in debug windows</span></span>
-<span data-ttu-id="72074-103">디버깅 세션 중 **조사식** 또는 **직접 실행** 창에 무명 형식 이니셜라이저가 입력되었습니다.</span><span class="sxs-lookup"><span data-stu-id="72074-103">An anonymous type initializer has been entered in the **Watch** or **Immediate** window during a debugging session.</span></span> <span data-ttu-id="72074-104">무명 형식 이니셜라이저는 디버깅 창에서 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="72074-104">Anonymous type initializers are not available in debugging windows.</span></span>  
+# <a name="anonymous-type-initializers-are-not-valid-in-debug-windows"></a><span data-ttu-id="afe76-102">디버그 창에서는 무명 형식 이니셜라이저를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="afe76-102">Anonymous type initializers are not valid in debug windows</span></span>
+<span data-ttu-id="afe76-103">디버깅 세션 중 **조사식** 또는 **직접 실행** 창에 무명 형식 이니셜라이저가 입력되었습니다.</span><span class="sxs-lookup"><span data-stu-id="afe76-103">An anonymous type initializer has been entered in the **Watch** or **Immediate** window during a debugging session.</span></span> <span data-ttu-id="afe76-104">무명 형식 이니셜라이저는 디버깅 창에서 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="afe76-104">Anonymous type initializers are not available in debugging windows.</span></span>  
   
- <span data-ttu-id="72074-105">**오류 ID:** BC36577</span><span class="sxs-lookup"><span data-stu-id="72074-105">**Error ID:** BC36577</span></span>  
+ <span data-ttu-id="afe76-105">**오류 ID:** BC36577</span><span class="sxs-lookup"><span data-stu-id="afe76-105">**Error ID:** BC36577</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="72074-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="72074-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="afe76-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="afe76-106">To correct this error</span></span>  
   
--   <span data-ttu-id="72074-107">코드 편집기에서 무명 형식 이니셜라이저를 테스트합니다.</span><span class="sxs-lookup"><span data-stu-id="72074-107">Test anonymous type initializers in the Code Editor.</span></span>  
+-   <span data-ttu-id="afe76-107">코드 편집기에서 무명 형식 이니셜라이저를 테스트합니다.</span><span class="sxs-lookup"><span data-stu-id="afe76-107">Test anonymous type initializers in the Code Editor.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="72074-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="72074-108">See also</span></span>
-- [<span data-ttu-id="72074-109">익명 형식</span><span class="sxs-lookup"><span data-stu-id="72074-109">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
-- [<span data-ttu-id="72074-110">자세히 보기: 만약... 직접 실행 창에서 코드를 테스트</span><span class="sxs-lookup"><span data-stu-id="72074-110">Closer Look: What If... Testing Code in the Immediate Window</span></span>](https://msdn.microsoft.com/library/3613a627-09a4-44e1-9cc2-f2a29f4e0744)
-- [<span data-ttu-id="72074-111">Visual Basic 응용 프로그램 디버깅</span><span class="sxs-lookup"><span data-stu-id="72074-111">Debugging Your Visual Basic Application</span></span>](../../visual-basic/developing-apps/debugging.md)
+## <a name="see-also"></a><span data-ttu-id="afe76-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="afe76-108">See also</span></span>
+- [<span data-ttu-id="afe76-109">익명 형식</span><span class="sxs-lookup"><span data-stu-id="afe76-109">Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="afe76-110">직접 실행 창-Visual Studio</span><span class="sxs-lookup"><span data-stu-id="afe76-110">Immediate Window - Visual Studio</span></span>](/visualstudio/ide/reference/immediate-window)
+- [<span data-ttu-id="afe76-111">Visual Basic 응용 프로그램 디버깅</span><span class="sxs-lookup"><span data-stu-id="afe76-111">Debugging Your Visual Basic Application</span></span>](../../visual-basic/developing-apps/debugging.md)
