--- a/docs/visual-basic/misc/bc30800.md
+++ b/docs/visual-basic/misc/bc30800.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC30800
 ms.assetid: ecdec760-8b51-474f-acad-17cf8059d83b
-ms.openlocfilehash: 40b38d0f6a0ee43a2a1aadf0f50be57aa67cc720
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 6c9744db0e000035b88500d177b8c5cb19721e9b
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54652243"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57202745"
 ---
-# <a name="method-arguments-must-be-enclosed-in-parentheses"></a><span data-ttu-id="6708a-102">메서드 인수는 괄호로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6708a-102">Method arguments must be enclosed in parentheses</span></span>
-<span data-ttu-id="6708a-103">프로시저 호출을 제어 하는 규칙은 최신 버전의 Visual Basic의 경우 간단한.</span><span class="sxs-lookup"><span data-stu-id="6708a-103">The rules governing procedure calls are simpler in newer versions of Visual Basic.</span></span> <span data-ttu-id="6708a-104">모든 인수는 괄호로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="6708a-104">All arguments must be enclosed by parentheses.</span></span>  
+# <a name="method-arguments-must-be-enclosed-in-parentheses"></a><span data-ttu-id="30337-102">메서드 인수는 괄호로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="30337-102">Method arguments must be enclosed in parentheses</span></span>
+<span data-ttu-id="30337-103">프로시저 호출을 제어 하는 규칙은 최신 버전의 Visual Basic의 경우 간단한.</span><span class="sxs-lookup"><span data-stu-id="30337-103">The rules governing procedure calls are simpler in newer versions of Visual Basic.</span></span> <span data-ttu-id="30337-104">모든 인수는 괄호로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="30337-104">All arguments must be enclosed by parentheses.</span></span>  
   
- <span data-ttu-id="6708a-105">**오류 ID:** BC30800</span><span class="sxs-lookup"><span data-stu-id="6708a-105">**Error ID:** BC30800</span></span>  
+ <span data-ttu-id="30337-105">**오류 ID:** BC30800</span><span class="sxs-lookup"><span data-stu-id="30337-105">**Error ID:** BC30800</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6708a-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="6708a-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="30337-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="30337-106">To correct this error</span></span>  
   
--   <span data-ttu-id="6708a-107">인수 목록을 괄호로 묶습니다. 예:</span><span class="sxs-lookup"><span data-stu-id="6708a-107">Enclose the argument list in parentheses; for example:</span></span>  
+-   <span data-ttu-id="30337-107">인수 목록을 괄호로 묶습니다. 예:</span><span class="sxs-lookup"><span data-stu-id="30337-107">Enclose the argument list in parentheses; for example:</span></span>  
   
     ```  
     MySub(ArrayIndex, NewValue)  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="6708a-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="6708a-108">See also</span></span>
-- [<span data-ttu-id="6708a-109">Visual Basic의 순서 변경 호출 프로시저</span><span class="sxs-lookup"><span data-stu-id="6708a-109">Procedure Calling Sequence Changes in Visual Basic</span></span>](https://msdn.microsoft.com/library/4ef1eea6-36cb-4b97-a31b-9ba65e46a9fd)
-- [<span data-ttu-id="6708a-110">프로시저 매개 변수 및 인수</span><span class="sxs-lookup"><span data-stu-id="6708a-110">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
+## <a name="see-also"></a><span data-ttu-id="30337-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="30337-108">See also</span></span>
+
+- [<span data-ttu-id="30337-109">프로시저 매개 변수 및 인수</span><span class="sxs-lookup"><span data-stu-id="30337-109">Procedure Parameters and Arguments</span></span>](../../visual-basic/programming-guide/language-features/procedures/procedure-parameters-and-arguments.md)
