--- a/docs/visual-basic/misc/bc30948.md
+++ b/docs/visual-basic/misc/bc30948.md
@@ -7,24 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC30948
 ms.assetid: 982bf6d2-ce62-4451-8a23-82dacf8ee100
-ms.openlocfilehash: 1ad6842e94138c16dc661c3a155f4c0b8880a7e5
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: c4ce09682a54a9cada116e989348b5413e7ba404
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54528123"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57201714"
 ---
-# <a name="unscheduled-fiber"></a><span data-ttu-id="7ff84-102">예약되지 않은 파이버입니다.</span><span class="sxs-lookup"><span data-stu-id="7ff84-102">Unscheduled Fiber</span></span>
-<span data-ttu-id="7ff84-103">실제 스레드에 예약되지 않은 논리 파이버에 있기 때문에 디버거에서 식을 계산할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="7ff84-103">The debugger cannot evaluate an expression because it is in a logical fiber that is not scheduled on a physical thread.</span></span> <span data-ttu-id="7ff84-104">이 오류는 프로세스가 파이버를 사용하여 SQL Server에서 실행 중인 경우에 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="7ff84-104">This can happen if the process is running on a SQL server using fibers.</span></span>  
+# <a name="unscheduled-fiber"></a><span data-ttu-id="ef94a-102">예약되지 않은 파이버입니다.</span><span class="sxs-lookup"><span data-stu-id="ef94a-102">Unscheduled Fiber</span></span>
+<span data-ttu-id="ef94a-103">실제 스레드에 예약되지 않은 논리 파이버에 있기 때문에 디버거에서 식을 계산할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ef94a-103">The debugger cannot evaluate an expression because it is in a logical fiber that is not scheduled on a physical thread.</span></span> <span data-ttu-id="ef94a-104">이 오류는 프로세스가 파이버를 사용하여 SQL Server에서 실행 중인 경우에 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ef94a-104">This can happen if the process is running on a SQL server using fibers.</span></span>  
   
- <span data-ttu-id="7ff84-105">파이버는 스택 및 레지스터 컨텍스트로 구성되며, 모든 스레드에서 실행할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="7ff84-105">A fiber consists of a stack and a register context, and it can run on any thread.</span></span> <span data-ttu-id="7ff84-106">파이버는 스레드에서 교환하여 나중에 다른 스레드에서 다시 시작할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="7ff84-106">A fiber can be swapped out of a thread and restarted later on a different thread.</span></span>  
+ <span data-ttu-id="ef94a-105">파이버는 스택 및 레지스터 컨텍스트로 구성되며, 모든 스레드에서 실행할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ef94a-105">A fiber consists of a stack and a register context, and it can run on any thread.</span></span> <span data-ttu-id="ef94a-106">파이버는 스레드에서 교환하여 나중에 다른 스레드에서 다시 시작할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ef94a-106">A fiber can be swapped out of a thread and restarted later on a different thread.</span></span>  
   
- <span data-ttu-id="7ff84-107">**오류 ID:** BC30948</span><span class="sxs-lookup"><span data-stu-id="7ff84-107">**Error ID:** BC30948</span></span>  
+ <span data-ttu-id="ef94a-107">**오류 ID:** BC30948</span><span class="sxs-lookup"><span data-stu-id="ef94a-107">**Error ID:** BC30948</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="7ff84-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="7ff84-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ef94a-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ef94a-108">To correct this error</span></span>  
   
--   <span data-ttu-id="7ff84-109">파이버가 실제 스레드에 예약되어 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="7ff84-109">Make sure that fiber is scheduled on a physical thread.</span></span>  
+-   <span data-ttu-id="ef94a-109">파이버가 실제 스레드에 예약되어 있는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="ef94a-109">Make sure that fiber is scheduled on a physical thread.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="7ff84-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="7ff84-110">See also</span></span>
-- [<span data-ttu-id="7ff84-111">SQL 디버깅</span><span class="sxs-lookup"><span data-stu-id="7ff84-111">Debugging SQL</span></span>](https://msdn.microsoft.com/library/f27c17e6-1d90-49f2-9fc0-d02e6a27f109)
-- [<span data-ttu-id="7ff84-112">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="7ff84-112">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
+## <a name="see-also"></a><span data-ttu-id="ef94a-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="ef94a-110">See also</span></span>
+
+- [<span data-ttu-id="ef94a-111">TRANSACT-SQL 디버거</span><span class="sxs-lookup"><span data-stu-id="ef94a-111">Transact-SQL Debugger</span></span>](/sql/ssms/scripting/transact-sql-debugger)
+- [<span data-ttu-id="ef94a-112">Visual Studio의 디버깅</span><span class="sxs-lookup"><span data-stu-id="ef94a-112">Debugging in Visual Studio</span></span>](/visualstudio/debugger/debugging-in-visual-studio)
