--- a/docs/visual-basic/misc/bc30995.md
+++ b/docs/visual-basic/misc/bc30995.md
@@ -7,28 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC30995
 ms.assetid: eed62684-66db-4fdb-9da7-f1407a55b172
-ms.openlocfilehash: d7d6122d5bb2024004d9a0c659b3afb174b8cf67
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: a93ce4d796e84cde0b2f6625134ec5a5896d7f7c
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54594033"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57201484"
 ---
-# <a name="leading--or--cannot-appear-in-a-constant-expression"></a><span data-ttu-id="791c4-102">선행 '.' 또는 '!'는 상수 식에 표시할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="791c4-102">Leading '.' or '!' cannot appear in a constant expression</span></span>
-<span data-ttu-id="791c4-103">멤버 액세스 (.) 및 사전 멤버 액세스 (!) 대부분의 경우 상수 식을 포함 하 여 멤버를 포함 하는 요소를 지정 하는 식이 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="791c4-103">Member access (.) and dictionary member access (!) require an expression specifying the element that contains the member most of the time, including constant expressions.</span></span> <span data-ttu-id="791c4-104">다음 선언은 올바르지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="791c4-104">The following declaration is not valid.</span></span>  
+# <a name="leading--or--cannot-appear-in-a-constant-expression"></a><span data-ttu-id="ede01-102">선행 '.' 또는 '!'는 상수 식에 표시할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ede01-102">Leading '.' or '!' cannot appear in a constant expression</span></span>
+<span data-ttu-id="ede01-103">멤버 액세스 (.) 및 사전 멤버 액세스 (!) 대부분의 경우 상수 식을 포함 하 여 멤버를 포함 하는 요소를 지정 하는 식이 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="ede01-103">Member access (.) and dictionary member access (!) require an expression specifying the element that contains the member most of the time, including constant expressions.</span></span> <span data-ttu-id="ede01-104">다음 선언은 올바르지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="ede01-104">The following declaration is not valid.</span></span>  
   
 ```  
 ' Not valid.  
 Const c As String = .name  
 ```  
   
- <span data-ttu-id="791c4-105">**오류 ID:** BC30995</span><span class="sxs-lookup"><span data-stu-id="791c4-105">**Error ID:** BC30995</span></span>  
+ <span data-ttu-id="ede01-105">**오류 ID:** BC30995</span><span class="sxs-lookup"><span data-stu-id="ede01-105">**Error ID:** BC30995</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="791c4-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="791c4-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ede01-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ede01-106">To correct this error</span></span>  
   
--   <span data-ttu-id="791c4-107">액세스하려는 멤버를 포함하는 인스턴스를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="791c4-107">Specify the instance that contains the member that you want to access.</span></span>  
+-   <span data-ttu-id="ede01-107">액세스하려는 멤버를 포함하는 인스턴스를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="ede01-107">Specify the instance that contains the member that you want to access.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="791c4-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="791c4-108">See also</span></span>
-- [<span data-ttu-id="791c4-109">개체 이니셜라이저: 명명 된 형식과 익명 형식</span><span class="sxs-lookup"><span data-stu-id="791c4-109">Object Initializers: Named and Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
-- [<span data-ttu-id="791c4-110">방법: 익명 형식 (Visual Basic)의 인스턴스를 선언 합니다.</span><span class="sxs-lookup"><span data-stu-id="791c4-110">How to: Declare an Instance of an Anonymous Type (Visual Basic)</span></span>](https://msdn.microsoft.com/library/119f616c-9bcd-4731-ac00-4285be5959f7)
-- [<span data-ttu-id="791c4-111">Const 문</span><span class="sxs-lookup"><span data-stu-id="791c4-111">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
+## <a name="see-also"></a><span data-ttu-id="ede01-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="ede01-108">See also</span></span>
+- [<span data-ttu-id="ede01-109">개체 이니셜라이저: 명명 된 형식과 익명 형식</span><span class="sxs-lookup"><span data-stu-id="ede01-109">Object Initializers: Named and Anonymous Types</span></span>](../../visual-basic/programming-guide/language-features/objects-and-classes/object-initializers-named-and-anonymous-types.md)
+- [<span data-ttu-id="ede01-110">익명 형식 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="ede01-110">Anonymous Types (Visual Basic)</span></span>](../programming-guide/language-features/objects-and-classes/anonymous-types.md)
+- [<span data-ttu-id="ede01-111">Const 문</span><span class="sxs-lookup"><span data-stu-id="ede01-111">Const Statement</span></span>](../../visual-basic/language-reference/statements/const-statement.md)
