--- a/docs/visual-basic/misc/bc31072.md
+++ b/docs/visual-basic/misc/bc31072.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - BC31072
 ms.assetid: ae89a9f1-d62b-4b83-b225-d4ff97d6266f
-ms.openlocfilehash: 628b10b2694db194f1142dedebf1aec69655b714
-ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
+ms.openlocfilehash: 08df60c8aa7e1d83e61c0ef0ffe1ab1dff5632a7
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/30/2019
-ms.locfileid: "55278748"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200132"
 ---
-# <a name="warning-treated-as-error-error"></a><span data-ttu-id="73f83-102">경고가 오류로 처리: \<오류 ></span><span class="sxs-lookup"><span data-stu-id="73f83-102">Warning treated as error: \<error></span></span>
-<span data-ttu-id="73f83-103">**경고를 오류로 처리** 옵션을 설정한 상태에서 컴파일된 어셈블리를 실행할 때 경고가 발생했습니다.</span><span class="sxs-lookup"><span data-stu-id="73f83-103">A warning was encountered when running an assembly compiled with the **Treat Warnings As Errors** option turned on.</span></span>  
+# <a name="warning-treated-as-error-error"></a><span data-ttu-id="79f6f-102">경고가 오류로 처리: \<오류 ></span><span class="sxs-lookup"><span data-stu-id="79f6f-102">Warning treated as error: \<error></span></span>
+<span data-ttu-id="79f6f-103">**경고를 오류로 처리** 옵션을 설정한 상태에서 컴파일된 어셈블리를 실행할 때 경고가 발생했습니다.</span><span class="sxs-lookup"><span data-stu-id="79f6f-103">A warning was encountered when running an assembly compiled with the **Treat Warnings As Errors** option turned on.</span></span>  
   
- <span data-ttu-id="73f83-104">**오류 ID:** BC31072</span><span class="sxs-lookup"><span data-stu-id="73f83-104">**Error ID:** BC31072</span></span>  
+ <span data-ttu-id="79f6f-104">**오류 ID:** BC31072</span><span class="sxs-lookup"><span data-stu-id="79f6f-104">**Error ID:** BC31072</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="73f83-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="73f83-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="79f6f-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="79f6f-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="73f83-106">이 경고를 수정합니다.</span><span class="sxs-lookup"><span data-stu-id="73f83-106">Correct the warning.</span></span>  
+1.  <span data-ttu-id="79f6f-106">이 경고를 수정합니다.</span><span class="sxs-lookup"><span data-stu-id="79f6f-106">Correct the warning.</span></span>  
   
-2.  <span data-ttu-id="73f83-107">**경고를 오류로 처리** 옵션을 해제한 상태에서 어셈블리를 컴파일합니다.</span><span class="sxs-lookup"><span data-stu-id="73f83-107">Compile the assembly with the **Treat Warnings As Errors** option turned off.</span></span>  
+2.  <span data-ttu-id="79f6f-107">**경고를 오류로 처리** 옵션을 해제한 상태에서 어셈블리를 컴파일합니다.</span><span class="sxs-lookup"><span data-stu-id="79f6f-107">Compile the assembly with the **Treat Warnings As Errors** option turned off.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="73f83-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="73f83-108">See also</span></span>
-- [<span data-ttu-id="73f83-109">/warnaserror(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="73f83-109">/warnaserror (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/warnaserror.md)
-- [<span data-ttu-id="73f83-110">속성 페이지 빌드 페이지</span><span class="sxs-lookup"><span data-stu-id="73f83-110">Property Pages Build Page</span></span>](https://msdn.microsoft.com/library/1e499ee7-5bd6-44ca-a048-82c357fafaa7)
-- [<span data-ttu-id="73f83-111">배포 프로젝트 속성 대화 상자, 구성 속성, 빌드</span><span class="sxs-lookup"><span data-stu-id="73f83-111">Build, Configuration Properties, Deployment Project Properties Dialog Box</span></span>](https://msdn.microsoft.com/library/45cf8bf4-56aa-4f2d-bdef-908c7010d7fc)
+## <a name="see-also"></a><span data-ttu-id="79f6f-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="79f6f-108">See also</span></span>
+- [<span data-ttu-id="79f6f-109">/warnaserror(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="79f6f-109">/warnaserror (Visual Basic)</span></span>](../../visual-basic/reference/command-line-compiler/warnaserror.md)
+- <span data-ttu-id="79f6f-110">[속성 페이지 빌드 페이지](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2010/zxbs6ywz(v=vs.100))</span><span class="sxs-lookup"><span data-stu-id="79f6f-110">[Property Pages Build Page](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2010/zxbs6ywz(v=vs.100))</span></span>
+- <span data-ttu-id="79f6f-111">[배포 프로젝트 속성 대화 상자, 구성 속성, 빌드](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2010/1befw7hy(v=vs.100))</span><span class="sxs-lookup"><span data-stu-id="79f6f-111">[Build, Configuration Properties, Deployment Project Properties Dialog Box](https://docs.microsoft.com/previous-versions/visualstudio/visual-studio-2010/1befw7hy(v=vs.100))</span></span>
