--- a/docs/visual-basic/misc/bc31112.md
+++ b/docs/visual-basic/misc/bc31112.md
@@ -7,24 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC31112
 ms.assetid: fd51fc53-a008-4b79-85fb-2d9fa1fb5a79
-ms.openlocfilehash: e269d69044207178623bffff499e54d93337ed53
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 7946f8f9a7541125bee8dc3f9b8b826bbef944b2
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54681614"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200015"
 ---
-# <a name="statement-cannot-appear-within-an-event-body"></a><span data-ttu-id="c9078-102">이벤트 본문 안에는 문을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="c9078-102">Statement cannot appear within an event body</span></span>
-<span data-ttu-id="c9078-103">이벤트 본문 안에는 문을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="c9078-103">Statement cannot appear within an event body.</span></span> <span data-ttu-id="c9078-104">이벤트의 끝으로 간주합니다.</span><span class="sxs-lookup"><span data-stu-id="c9078-104">End of event assumed.</span></span>  
+# <a name="statement-cannot-appear-within-an-event-body"></a><span data-ttu-id="f6b66-102">이벤트 본문 안에는 문을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f6b66-102">Statement cannot appear within an event body</span></span>
+<span data-ttu-id="f6b66-103">이벤트 본문 안에는 문을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="f6b66-103">Statement cannot appear within an event body.</span></span> <span data-ttu-id="f6b66-104">이벤트의 끝으로 간주합니다.</span><span class="sxs-lookup"><span data-stu-id="f6b66-104">End of event assumed.</span></span>  
   
- <span data-ttu-id="c9078-105">이벤트 본문에서 유효하지 않은 문이 이벤트 본문에 있습니다.</span><span class="sxs-lookup"><span data-stu-id="c9078-105">A statement that is not valid inside an event body appears inside one.</span></span>  
+ <span data-ttu-id="f6b66-105">이벤트 본문에서 유효하지 않은 문이 이벤트 본문에 있습니다.</span><span class="sxs-lookup"><span data-stu-id="f6b66-105">A statement that is not valid inside an event body appears inside one.</span></span>  
   
- <span data-ttu-id="c9078-106">**오류 ID:** BC31112</span><span class="sxs-lookup"><span data-stu-id="c9078-106">**Error ID:** BC31112</span></span>  
+ <span data-ttu-id="f6b66-106">**오류 ID:** BC31112</span><span class="sxs-lookup"><span data-stu-id="f6b66-106">**Error ID:** BC31112</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c9078-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="c9078-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f6b66-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f6b66-107">To correct this error</span></span>  
   
--   <span data-ttu-id="c9078-108">문 앞에 `End Event` 를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="c9078-108">Add an `End Event` before the statement.</span></span>  
+-   <span data-ttu-id="f6b66-108">문 앞에 `End Event` 를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="f6b66-108">Add an `End Event` before the statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c9078-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="c9078-109">See also</span></span>
-- [<span data-ttu-id="c9078-110">응용 프로그램 이벤트 샘플</span><span class="sxs-lookup"><span data-stu-id="c9078-110">Application Events Sample</span></span>](https://msdn.microsoft.com/library/289a787f-b97e-43c8-a304-fe95e45f4a0d)
-- [<span data-ttu-id="c9078-111">Event 문</span><span class="sxs-lookup"><span data-stu-id="c9078-111">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+## <a name="see-also"></a><span data-ttu-id="f6b66-109">참고자료</span><span class="sxs-lookup"><span data-stu-id="f6b66-109">See also</span></span>
+- [<span data-ttu-id="f6b66-110">Event 문</span><span class="sxs-lookup"><span data-stu-id="f6b66-110">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
