--- a/docs/visual-basic/misc/bc31121.md
+++ b/docs/visual-basic/misc/bc31121.md
@@ -7,33 +7,33 @@ f1_keywords:
 helpviewer_keywords:
 - BC31121
 ms.assetid: b5687034-a2b2-4961-88b7-0ba73023573e
-ms.openlocfilehash: 2bfc6d9dd0cc9bf869d0bc58ccff8ff81fde455d
-ms.sourcegitcommit: 40364ded04fa6cdcb2b6beca7f68412e2e12f633
+ms.openlocfilehash: a6a399b2b1d4edb7dad5d5fb2f33ba03f9f5a430
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 02/28/2019
-ms.locfileid: "56965818"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57201822"
 ---
-# <a name="custom-modifier-is-not-valid-on-events-declared-in-interfaces"></a><span data-ttu-id="49194-102">인터페이스에 선언된 이벤트에는 'Custom' 한정자를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="49194-102">'Custom' modifier is not valid on events declared in interfaces</span></span>
-<span data-ttu-id="49194-103">사용자 지정 이벤트는 `AddHandler`, `RemoverHandler`및 `RaiseEvent` 메서드의 구현을 제공해야 하므로 인터페이스에서 선언할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="49194-103">A custom event cannot be declared in an interface because a custom event must provide an implementation of its `AddHandler`, `RemoverHandler`, and `RaiseEvent` methods.</span></span>  
+# <a name="custom-modifier-is-not-valid-on-events-declared-in-interfaces"></a><span data-ttu-id="11b92-102">인터페이스에 선언된 이벤트에는 'Custom' 한정자를 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="11b92-102">'Custom' modifier is not valid on events declared in interfaces</span></span>
+<span data-ttu-id="11b92-103">사용자 지정 이벤트는 `AddHandler`, `RemoverHandler`및 `RaiseEvent` 메서드의 구현을 제공해야 하므로 인터페이스에서 선언할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="11b92-103">A custom event cannot be declared in an interface because a custom event must provide an implementation of its `AddHandler`, `RemoverHandler`, and `RaiseEvent` methods.</span></span>  
   
- <span data-ttu-id="49194-104">이벤트를 구현하는 파생 클래스에서 `Custom` 키워드를 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="49194-104">The `Custom` keyword can be used in a derived class that implements the event.</span></span>  
+ <span data-ttu-id="11b92-104">이벤트를 구현하는 파생 클래스에서 `Custom` 키워드를 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="11b92-104">The `Custom` keyword can be used in a derived class that implements the event.</span></span>  
   
- <span data-ttu-id="49194-105">**오류 ID:** BC31121</span><span class="sxs-lookup"><span data-stu-id="49194-105">**Error ID:** BC31121</span></span>  
+ <span data-ttu-id="11b92-105">**오류 ID:** BC31121</span><span class="sxs-lookup"><span data-stu-id="11b92-105">**Error ID:** BC31121</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="49194-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="49194-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="11b92-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="11b92-106">To correct this error</span></span>  
   
--   <span data-ttu-id="49194-107">인터페이스의 이벤트 선언에서 `Custom` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="49194-107">Remove the `Custom` keyword from the event declaration in the interface.</span></span>  
+-   <span data-ttu-id="11b92-107">인터페이스의 이벤트 선언에서 `Custom` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="11b92-107">Remove the `Custom` keyword from the event declaration in the interface.</span></span>  
   
-## <a name="example"></a><span data-ttu-id="49194-108">예제</span><span class="sxs-lookup"><span data-stu-id="49194-108">Example</span></span>  
- <span data-ttu-id="49194-109">이 예제에서는 인터페이스에서 선언된 이벤트를 사용자 지정 이벤트로 구현하는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="49194-109">This example shows how to implement an event declared in an interface as a custom event.</span></span>  
+## <a name="example"></a><span data-ttu-id="11b92-108">예제</span><span class="sxs-lookup"><span data-stu-id="11b92-108">Example</span></span>  
+ <span data-ttu-id="11b92-109">이 예제에서는 인터페이스에서 선언된 이벤트를 사용자 지정 이벤트로 구현하는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="11b92-109">This example shows how to implement an event declared in an interface as a custom event.</span></span>  
   
  [!code-vb[VbVbalrEventError#3](~/samples/snippets/visualbasic/VS_Snippets_VBCSharp/VbVbalrEventError/VB/VbVbalrEventError.vb#3)]  
   
-## <a name="see-also"></a><span data-ttu-id="49194-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="49194-110">See also</span></span>
-- [<span data-ttu-id="49194-111">사용자 지정-삭제</span><span class="sxs-lookup"><span data-stu-id="49194-111">Custom - delete</span></span>](https://msdn.microsoft.com/library/dc62be07-c896-4866-a533-982a661d143f)
-- [<span data-ttu-id="49194-112">Event 문</span><span class="sxs-lookup"><span data-stu-id="49194-112">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
-- [<span data-ttu-id="49194-113">Delegate 문</span><span class="sxs-lookup"><span data-stu-id="49194-113">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
-- [<span data-ttu-id="49194-114">Class 문</span><span class="sxs-lookup"><span data-stu-id="49194-114">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
-- [<span data-ttu-id="49194-115">Interface 문</span><span class="sxs-lookup"><span data-stu-id="49194-115">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
-- [<span data-ttu-id="49194-116">이벤트</span><span class="sxs-lookup"><span data-stu-id="49194-116">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
+## <a name="see-also"></a><span data-ttu-id="11b92-110">참고자료</span><span class="sxs-lookup"><span data-stu-id="11b92-110">See also</span></span>
+
+- [<span data-ttu-id="11b92-111">Event 문</span><span class="sxs-lookup"><span data-stu-id="11b92-111">Event Statement</span></span>](../../visual-basic/language-reference/statements/event-statement.md)
+- [<span data-ttu-id="11b92-112">Delegate 문</span><span class="sxs-lookup"><span data-stu-id="11b92-112">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)
+- [<span data-ttu-id="11b92-113">Class 문</span><span class="sxs-lookup"><span data-stu-id="11b92-113">Class Statement</span></span>](../../visual-basic/language-reference/statements/class-statement.md)
+- [<span data-ttu-id="11b92-114">Interface 문</span><span class="sxs-lookup"><span data-stu-id="11b92-114">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+- [<span data-ttu-id="11b92-115">이벤트</span><span class="sxs-lookup"><span data-stu-id="11b92-115">Events</span></span>](../../visual-basic/programming-guide/language-features/events/index.md)
