--- a/docs/visual-basic/misc/bc33028.md
+++ b/docs/visual-basic/misc/bc33028.md
@@ -7,29 +7,29 @@ f1_keywords:
 helpviewer_keywords:
 - BC33028
 ms.assetid: 064b478c-85a1-4e13-a292-d8aebb079cad
-ms.openlocfilehash: a77e164f4e2f4c1e570df7865f7259049bd0734b
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: bed17886fe31b1ac27da8d7f6f9e509935d13ca5
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54718561"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57203180"
 ---
-# <a name="conversion-operators-cannot-convert-to-object"></a><span data-ttu-id="ac79a-102">변환 연산자는 Object로 변환할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ac79a-102">Conversion operators cannot convert to Object</span></span>
-<span data-ttu-id="ac79a-103">변환 연산자가 [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md)의 반환 형식으로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="ac79a-103">A conversion operator is declared with a return type of the [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span></span>  
+# <a name="conversion-operators-cannot-convert-to-object"></a><span data-ttu-id="fe7aa-102">변환 연산자는 Object로 변환할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="fe7aa-102">Conversion operators cannot convert to Object</span></span>
+<span data-ttu-id="fe7aa-103">변환 연산자가 [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md)의 반환 형식으로 선언되었습니다.</span><span class="sxs-lookup"><span data-stu-id="fe7aa-103">A conversion operator is declared with a return type of the [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md).</span></span>  
   
- <span data-ttu-id="ac79a-104">컴파일 타임에 Visual Basic은 미리 정의 된 변환이 있는 임의 참조 형식에서, 해당 상속 계층 구조의 모든 형식에 형식에서 파생 된 또는 파생 된 간주 합니다.</span><span class="sxs-lookup"><span data-stu-id="ac79a-104">At compile time, Visual Basic considers a predefined conversion to exist from any reference type to any type in its inheritance hierarchy, that is, any type from which it derives or which derives from it.</span></span> <span data-ttu-id="ac79a-105">`Object` 는 [!INCLUDE[dnprdnshort](~/includes/dnprdnshort-md.md)]에서 유니버설 데이터 형식이므로 모든 형식이 `Object`에서 파생됩니다.</span><span class="sxs-lookup"><span data-stu-id="ac79a-105">`Object` is the universal data type in the [!INCLUDE[dnprdnshort](~/includes/dnprdnshort-md.md)], so every type derives from `Object`.</span></span>  
+ <span data-ttu-id="fe7aa-104">컴파일 타임에 Visual Basic은 미리 정의 된 변환이 있는 임의 참조 형식에서, 해당 상속 계층 구조의 모든 형식에 형식에서 파생 된 또는 파생 된 간주 합니다.</span><span class="sxs-lookup"><span data-stu-id="fe7aa-104">At compile time, Visual Basic considers a predefined conversion to exist from any reference type to any type in its inheritance hierarchy, that is, any type from which it derives or which derives from it.</span></span> <span data-ttu-id="fe7aa-105">`Object` 는 [!INCLUDE[dnprdnshort](~/includes/dnprdnshort-md.md)]에서 유니버설 데이터 형식이므로 모든 형식이 `Object`에서 파생됩니다.</span><span class="sxs-lookup"><span data-stu-id="fe7aa-105">`Object` is the universal data type in the [!INCLUDE[dnprdnshort](~/includes/dnprdnshort-md.md)], so every type derives from `Object`.</span></span>  
   
- <span data-ttu-id="ac79a-106">컴파일러에서는 이 변환이 이미 정의되어 있다고 간주하므로 다시 정의할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ac79a-106">Because the compiler considers this conversion to be already defined, it does not allow you to redefine it.</span></span>  
+ <span data-ttu-id="fe7aa-106">컴파일러에서는 이 변환이 이미 정의되어 있다고 간주하므로 다시 정의할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="fe7aa-106">Because the compiler considers this conversion to be already defined, it does not allow you to redefine it.</span></span>  
   
- <span data-ttu-id="ac79a-107">**오류 ID:** BC33028</span><span class="sxs-lookup"><span data-stu-id="ac79a-107">**Error ID:** BC33028</span></span>  
+ <span data-ttu-id="fe7aa-107">**오류 ID:** BC33028</span><span class="sxs-lookup"><span data-stu-id="fe7aa-107">**Error ID:** BC33028</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ac79a-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ac79a-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="fe7aa-108">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="fe7aa-108">To correct this error</span></span>  
   
--   <span data-ttu-id="ac79a-109">이 연산자 정의를 완전히 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="ac79a-109">Remove this operator definition entirely.</span></span> <span data-ttu-id="ac79a-110">이미 미리 정의되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ac79a-110">It is already predefined.</span></span>  
+-   <span data-ttu-id="fe7aa-109">이 연산자 정의를 완전히 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="fe7aa-109">Remove this operator definition entirely.</span></span> <span data-ttu-id="fe7aa-110">이미 미리 정의되어 있습니다.</span><span class="sxs-lookup"><span data-stu-id="fe7aa-110">It is already predefined.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ac79a-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="ac79a-111">See also</span></span>
-- [<span data-ttu-id="ac79a-112">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="ac79a-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
-- [<span data-ttu-id="ac79a-113">Operator 문</span><span class="sxs-lookup"><span data-stu-id="ac79a-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
-- [<span data-ttu-id="ac79a-114">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="ac79a-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
-- [<span data-ttu-id="ac79a-115">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="ac79a-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
-- [<span data-ttu-id="ac79a-116">유니버설 데이터 형식 개체(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="ac79a-116">Object as the Universal Data Type (Visual Basic)</span></span>](https://msdn.microsoft.com/library/5315bf21-2b22-45ab-98cd-5631dffbcb2f)
+## <a name="see-also"></a><span data-ttu-id="fe7aa-111">참고자료</span><span class="sxs-lookup"><span data-stu-id="fe7aa-111">See also</span></span>
+- [<span data-ttu-id="fe7aa-112">연산자 프로시저</span><span class="sxs-lookup"><span data-stu-id="fe7aa-112">Operator Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)
+- [<span data-ttu-id="fe7aa-113">Operator 문</span><span class="sxs-lookup"><span data-stu-id="fe7aa-113">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)
+- [<span data-ttu-id="fe7aa-114">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="fe7aa-114">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)
+- [<span data-ttu-id="fe7aa-115">방법: 변환 연산자를 정의 합니다.</span><span class="sxs-lookup"><span data-stu-id="fe7aa-115">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+- [<span data-ttu-id="fe7aa-116">개체 데이터 형식 (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="fe7aa-116">Object Data Type (Visual Basic)</span></span>](../language-reference/data-types/object-data-type.md)
