--- a/docs/visual-basic/misc/bc36627.md
+++ b/docs/visual-basic/misc/bc36627.md
@@ -7,23 +7,23 @@ f1_keywords:
 helpviewer_keywords:
 - BC36627
 ms.assetid: c10fc492-9c2d-4150-9779-8234f57b6138
-ms.openlocfilehash: 366b4b12107fd92e6108ea5ab0ef6347db15fd62
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 6d2859cd0ea9d4cdf7b839c011e667923ec15344
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54637062"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57202784"
 ---
-# <a name="evaluation-of-lambda-expressions-is-not-valid-in-the-debugger"></a><span data-ttu-id="3a931-102">디버거에서 람다 식 계산이 올바르지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="3a931-102">Evaluation of lambda expressions is not valid in the debugger</span></span>
-<span data-ttu-id="3a931-103">디버깅 세션 중 **조사식** 또는 **직접 실행** 창에 람다 식이 입력되었습니다.</span><span class="sxs-lookup"><span data-stu-id="3a931-103">A lambda expression has been entered in the **Watch** or **Immediate** window during a debugging session.</span></span> <span data-ttu-id="3a931-104">람다 식을 디버그 창에서 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="3a931-104">Lambda expressions are not available in debugging windows.</span></span>  
+# <a name="evaluation-of-lambda-expressions-is-not-valid-in-the-debugger"></a><span data-ttu-id="a14d1-102">디버거에서 람다 식 계산이 올바르지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="a14d1-102">Evaluation of lambda expressions is not valid in the debugger</span></span>
+<span data-ttu-id="a14d1-103">디버깅 세션 중 **조사식** 또는 **직접 실행** 창에 람다 식이 입력되었습니다.</span><span class="sxs-lookup"><span data-stu-id="a14d1-103">A lambda expression has been entered in the **Watch** or **Immediate** window during a debugging session.</span></span> <span data-ttu-id="a14d1-104">람다 식을 디버그 창에서 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="a14d1-104">Lambda expressions are not available in debugging windows.</span></span>  
   
- <span data-ttu-id="3a931-105">**오류 ID:** BC36627</span><span class="sxs-lookup"><span data-stu-id="3a931-105">**Error ID:** BC36627</span></span>  
+ <span data-ttu-id="a14d1-105">**오류 ID:** BC36627</span><span class="sxs-lookup"><span data-stu-id="a14d1-105">**Error ID:** BC36627</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="3a931-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="3a931-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a14d1-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a14d1-106">To correct this error</span></span>  
   
--   <span data-ttu-id="3a931-107">코드 편집기에서 람다 식을 테스트합니다.</span><span class="sxs-lookup"><span data-stu-id="3a931-107">Test lambda expressions in the Code Editor.</span></span>  
+-   <span data-ttu-id="a14d1-107">코드 편집기에서 람다 식을 테스트합니다.</span><span class="sxs-lookup"><span data-stu-id="a14d1-107">Test lambda expressions in the Code Editor.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="3a931-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="3a931-108">See also</span></span>
-- [<span data-ttu-id="3a931-109">람다 식</span><span class="sxs-lookup"><span data-stu-id="3a931-109">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
-- [<span data-ttu-id="3a931-110">자세히 보기: 만약... 직접 실행 창에서 코드를 테스트</span><span class="sxs-lookup"><span data-stu-id="3a931-110">Closer Look: What If... Testing Code in the Immediate Window</span></span>](https://msdn.microsoft.com/library/3613a627-09a4-44e1-9cc2-f2a29f4e0744)
-- [<span data-ttu-id="3a931-111">Visual Basic 응용 프로그램 디버깅</span><span class="sxs-lookup"><span data-stu-id="3a931-111">Debugging Your Visual Basic Application</span></span>](../../visual-basic/developing-apps/debugging.md)
+## <a name="see-also"></a><span data-ttu-id="a14d1-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="a14d1-108">See also</span></span>
+- [<span data-ttu-id="a14d1-109">람다 식</span><span class="sxs-lookup"><span data-stu-id="a14d1-109">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+- [<span data-ttu-id="a14d1-110">직접 실행 창-Visual Studio</span><span class="sxs-lookup"><span data-stu-id="a14d1-110">Immediate Window - Visual Studio</span></span>](/visualstudio/ide/reference/immediate-window)
+- [<span data-ttu-id="a14d1-111">Visual Basic 응용 프로그램 디버깅</span><span class="sxs-lookup"><span data-stu-id="a14d1-111">Debugging Your Visual Basic Application</span></span>](../../visual-basic/developing-apps/debugging.md)
