--- a/docs/visual-basic/misc/bc36634.md
+++ b/docs/visual-basic/misc/bc36634.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - BC36634
 ms.assetid: ed751d8d-11b7-4210-97e0-0319edff8c34
-ms.openlocfilehash: f0ca686201f6dc6c8060e19e8df71b20ade76710
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 6e63ae9c0edbf343e9c3e0fd7ced2bcff7d98359
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54521090"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200873"
 ---
-# <a name="attributes-cannot-be-applied-to-parameters-of-lambda-expressions"></a><span data-ttu-id="527bf-102">람다 식의 매개 변수에는 특성을 적용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="527bf-102">Attributes cannot be applied to parameters of lambda expressions</span></span>
-<span data-ttu-id="527bf-103">특성을 람다 식 정의의 매개 변수에 적용했습니다. 이는 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="527bf-103">You have applied an attribute to a parameter in a lambda expression definition, which is not supported.</span></span> <span data-ttu-id="527bf-104">다음 코드는 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="527bf-104">The following code causes this error.</span></span>  
+# <a name="attributes-cannot-be-applied-to-parameters-of-lambda-expressions"></a><span data-ttu-id="36533-102">람다 식의 매개 변수에는 특성을 적용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="36533-102">Attributes cannot be applied to parameters of lambda expressions</span></span>
+<span data-ttu-id="36533-103">특성을 람다 식 정의의 매개 변수에 적용했습니다. 이는 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="36533-103">You have applied an attribute to a parameter in a lambda expression definition, which is not supported.</span></span> <span data-ttu-id="36533-104">다음 코드는 이 오류를 생성합니다.</span><span class="sxs-lookup"><span data-stu-id="36533-104">The following code causes this error.</span></span>  
   
 ```vb  
-Sub LambaAttribute()  
+Sub LambdaAttribute()  
     ' Not valid.  
     Dim add1 = _  
     Function(<System.Runtime.InteropServices.InAttribute()> m As Integer) _  
@@ -26,13 +26,13 @@ Sub LambaAttribute()
 End Sub  
 ```  
   
- <span data-ttu-id="527bf-105">**오류 ID:** BC36634</span><span class="sxs-lookup"><span data-stu-id="527bf-105">**Error ID:** BC36634</span></span>  
+ <span data-ttu-id="36533-105">**오류 ID:** BC36634</span><span class="sxs-lookup"><span data-stu-id="36533-105">**Error ID:** BC36634</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="527bf-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="527bf-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="36533-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="36533-106">To correct this error</span></span>  
   
--   <span data-ttu-id="527bf-107">특성을 제거하거나 람다 식을 일반 함수로 변경하여 코드를 수정하는 것이 좋습니다.</span><span class="sxs-lookup"><span data-stu-id="527bf-107">Remove the attribute, or consider revising your code by changing the lambda expression to a regular function.</span></span>  
+-   <span data-ttu-id="36533-107">특성을 제거하거나 람다 식을 일반 함수로 변경하여 코드를 수정하는 것이 좋습니다.</span><span class="sxs-lookup"><span data-stu-id="36533-107">Remove the attribute, or consider revising your code by changing the lambda expression to a regular function.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="527bf-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="527bf-108">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="36533-108">참고자료</span><span class="sxs-lookup"><span data-stu-id="36533-108">See also</span></span>
 - <xref:System.Runtime.InteropServices.InAttribute>
-- [<span data-ttu-id="527bf-109">람다 식</span><span class="sxs-lookup"><span data-stu-id="527bf-109">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
-- [<span data-ttu-id="527bf-110">특성 개요</span><span class="sxs-lookup"><span data-stu-id="527bf-110">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
+- [<span data-ttu-id="36533-109">람다 식</span><span class="sxs-lookup"><span data-stu-id="36533-109">Lambda Expressions</span></span>](../../visual-basic/programming-guide/language-features/procedures/lambda-expressions.md)
+- [<span data-ttu-id="36533-110">특성 개요</span><span class="sxs-lookup"><span data-stu-id="36533-110">Attributes overview</span></span>](~/docs/visual-basic/programming-guide/concepts/attributes/index.md)
