--- a/docs/visual-basic/misc/bc42002.md
+++ b/docs/visual-basic/misc/bc42002.md
@@ -7,27 +7,27 @@ f1_keywords:
 helpviewer_keywords:
 - BC42002
 ms.assetid: 11eeac74-666d-4b23-81bc-b1691290ddd0
-ms.openlocfilehash: ccfed85d0d95abc54fc699c00383e0c63aa49819
-ms.sourcegitcommit: 6b308cf6d627d78ee36dbbae8972a310ac7fd6c8
+ms.openlocfilehash: 2b0b0a17a56d04e09cdf7812114317e744285b23
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/23/2019
-ms.locfileid: "54548870"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200054"
 ---
-# <a name="classterminate-event-is-no-longer-supported"></a><span data-ttu-id="69ffa-102">'Class_Terminate' 이벤트는 더 이상 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="69ffa-102">'Class_Terminate' event is no longer supported</span></span>
-<span data-ttu-id="69ffa-103">'Class_Terminate' 이벤트는 더 이상 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="69ffa-103">'Class_Terminate' event is no longer supported.</span></span> <span data-ttu-id="69ffa-104">'Sub Finalize'을 사용하여 리소스를 확보합니다.</span><span class="sxs-lookup"><span data-stu-id="69ffa-104">Use 'Sub Finalize' to free resources.</span></span>  
+# <a name="classterminate-event-is-no-longer-supported"></a><span data-ttu-id="82897-102">'Class_Terminate' 이벤트는 더 이상 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="82897-102">'Class_Terminate' event is no longer supported</span></span>
+<span data-ttu-id="82897-103">'Class_Terminate' 이벤트는 더 이상 지원되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="82897-103">'Class_Terminate' event is no longer supported.</span></span> <span data-ttu-id="82897-104">'Sub Finalize'을 사용하여 리소스를 확보합니다.</span><span class="sxs-lookup"><span data-stu-id="82897-104">Use 'Sub Finalize' to free resources.</span></span>  
   
- <span data-ttu-id="69ffa-105">이전 버전 Visual Basic의 `Class_Terminate` 이벤트가 클래스 소멸자로 대체되었습니다.</span><span class="sxs-lookup"><span data-stu-id="69ffa-105">The `Class_Terminate` event of previous versions of Visual Basic is replaced by class destructors.</span></span>  
+ <span data-ttu-id="82897-105">이전 버전 Visual Basic의 `Class_Terminate` 이벤트가 클래스 소멸자로 대체되었습니다.</span><span class="sxs-lookup"><span data-stu-id="82897-105">The `Class_Terminate` event of previous versions of Visual Basic is replaced by class destructors.</span></span>  
   
- <span data-ttu-id="69ffa-106">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="69ffa-106">By default, this message is a warning.</span></span> <span data-ttu-id="69ffa-107">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="69ffa-107">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="82897-106">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="82897-106">By default, this message is a warning.</span></span> <span data-ttu-id="82897-107">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="82897-107">For information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="69ffa-108">**오류 ID:** BC42002</span><span class="sxs-lookup"><span data-stu-id="69ffa-108">**Error ID:** BC42002</span></span>  
+ <span data-ttu-id="82897-108">**오류 ID:** BC42002</span><span class="sxs-lookup"><span data-stu-id="82897-108">**Error ID:** BC42002</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="69ffa-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="69ffa-109">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="82897-109">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="82897-109">To correct this error</span></span>  
   
--   <span data-ttu-id="69ffa-110">`Sub` 라는 `Finalize` 프로시저를 선언하여 클래스를 종료합니다.</span><span class="sxs-lookup"><span data-stu-id="69ffa-110">Declare a `Sub` procedure named `Finalize` to terminate a class.</span></span> <span data-ttu-id="69ffa-111">인스턴스에 대한 활성 참조가 더 이상 없음을 가비지 수집기가 감지하면`Sub Finalize` 가 호출됩니다.</span><span class="sxs-lookup"><span data-stu-id="69ffa-111">`Sub Finalize` is called when the garbage collector detects that there are no more active references to the instance.</span></span>  
+-   <span data-ttu-id="82897-110">`Sub` 라는 `Finalize` 프로시저를 선언하여 클래스를 종료합니다.</span><span class="sxs-lookup"><span data-stu-id="82897-110">Declare a `Sub` procedure named `Finalize` to terminate a class.</span></span> <span data-ttu-id="82897-111">인스턴스에 대한 활성 참조가 더 이상 없음을 가비지 수집기가 감지하면`Sub Finalize` 가 호출됩니다.</span><span class="sxs-lookup"><span data-stu-id="82897-111">`Sub Finalize` is called when the garbage collector detects that there are no more active references to the instance.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="69ffa-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="69ffa-112">See also</span></span>
-- [<span data-ttu-id="69ffa-113">Visual Basic 6.0 사용자를 위한 클래스</span><span class="sxs-lookup"><span data-stu-id="69ffa-113">Classes for Visual Basic 6.0 Users</span></span>](https://msdn.microsoft.com/library/d625222c-cd32-4c8d-b25c-ea71729b88b7)
-- [<span data-ttu-id="69ffa-114">생성자</span><span class="sxs-lookup"><span data-stu-id="69ffa-114">Constructors</span></span>](~/docs/visual-basic/programming-guide/concepts/object-oriented-programming.md#constructors)
-- [<span data-ttu-id="69ffa-115">Dispose 메서드 구현</span><span class="sxs-lookup"><span data-stu-id="69ffa-115">Implementing a Dispose method</span></span>](~/docs/standard/garbage-collection/implementing-dispose.md)
+## <a name="see-also"></a><span data-ttu-id="82897-112">참고자료</span><span class="sxs-lookup"><span data-stu-id="82897-112">See also</span></span>
+
+- [<span data-ttu-id="82897-113">생성자</span><span class="sxs-lookup"><span data-stu-id="82897-113">Constructors</span></span>](../programming-guide/concepts/object-oriented-programming.md#constructors)
+- [<span data-ttu-id="82897-114">Dispose 메서드 구현</span><span class="sxs-lookup"><span data-stu-id="82897-114">Implementing a Dispose method</span></span>](~/docs/standard/garbage-collection/implementing-dispose.md)
