--- a/docs/visual-basic/misc/bc42200.md
+++ b/docs/visual-basic/misc/bc42200.md
@@ -7,26 +7,26 @@ f1_keywords:
 helpviewer_keywords:
 - BC42200
 ms.assetid: c79d672e-638c-4d87-9b93-edf12ce84a52
-ms.openlocfilehash: 50a37daa377e869ec4413134ea41a4f8169f0170
-ms.sourcegitcommit: 14355b4b2fe5bcf874cac96d0a9e6376b567e4c7
+ms.openlocfilehash: 62b4b12408b67f4fbfc764c3228290567ef92d2c
+ms.sourcegitcommit: 41c0637e894fbcd0713d46d6ef1866f08dc321a2
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 01/30/2019
-ms.locfileid: "55275395"
+ms.lasthandoff: 03/01/2019
+ms.locfileid: "57200743"
 ---
-# <a name="method-methodname-has-a-link-demand-but-overrides-or-implements-the-following-methods-which-do-not-have-a-link-demand-a-security-hole-may-exist"></a><span data-ttu-id="9c7c2-103">메서드 '\<methodname >' 링크 요청을 재정의 하거나 링크 요청이 없는 다음 메서드를 구현 합니다.</span><span class="sxs-lookup"><span data-stu-id="9c7c2-103">Method '\<methodname>' has a link demand, but overrides or implements the following methods which do not have a link demand.</span></span> <span data-ttu-id="9c7c2-104">보안 허점이 있을 수도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9c7c2-104">A security hole may exist:</span></span>
-<span data-ttu-id="9c7c2-105">보안 링크 요청 작업이 메서드에 추가되었습니다.</span><span class="sxs-lookup"><span data-stu-id="9c7c2-105">A security link demand action has been added to the method.</span></span> <span data-ttu-id="9c7c2-106">그러나 메서드가 링크 요청이 없는 메서드를 재정의하거나 구현합니다.</span><span class="sxs-lookup"><span data-stu-id="9c7c2-106">However, the method overrides or implements methods that do not have link demands.</span></span> <span data-ttu-id="9c7c2-107">따라서 재정의되거나 구현된 메서드를 권한 없이 호출할 수 있으며, 보안 문제가 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="9c7c2-107">Therefore the overridden or implemented methods can be called with insufficient permissions, which may cause a security issue.</span></span>  
+# <a name="method-methodname-has-a-link-demand-but-overrides-or-implements-the-following-methods-which-do-not-have-a-link-demand-a-security-hole-may-exist"></a><span data-ttu-id="f32a6-103">메서드 '\<methodname >' 링크 요청을 재정의 하거나 링크 요청이 없는 다음 메서드를 구현 합니다.</span><span class="sxs-lookup"><span data-stu-id="f32a6-103">Method '\<methodname>' has a link demand, but overrides or implements the following methods which do not have a link demand.</span></span> <span data-ttu-id="f32a6-104">보안 허점이 있을 수도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="f32a6-104">A security hole may exist:</span></span>
+<span data-ttu-id="f32a6-105">보안 링크 요청 작업이 메서드에 추가되었습니다.</span><span class="sxs-lookup"><span data-stu-id="f32a6-105">A security link demand action has been added to the method.</span></span> <span data-ttu-id="f32a6-106">그러나 메서드가 링크 요청이 없는 메서드를 재정의하거나 구현합니다.</span><span class="sxs-lookup"><span data-stu-id="f32a6-106">However, the method overrides or implements methods that do not have link demands.</span></span> <span data-ttu-id="f32a6-107">따라서 재정의되거나 구현된 메서드를 권한 없이 호출할 수 있으며, 보안 문제가 발생할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="f32a6-107">Therefore the overridden or implemented methods can be called with insufficient permissions, which may cause a security issue.</span></span>  
   
- <span data-ttu-id="9c7c2-108">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="9c7c2-108">By default, this message is a warning.</span></span> <span data-ttu-id="9c7c2-109">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="9c7c2-109">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
+ <span data-ttu-id="f32a6-108">이 메시지는 기본적으로 경고입니다.</span><span class="sxs-lookup"><span data-stu-id="f32a6-108">By default, this message is a warning.</span></span> <span data-ttu-id="f32a6-109">경고를 숨기거나 오류로 처리하는 방법에 대한 자세한 내용은 [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="f32a6-109">For more information on hiding warnings or treating warnings as errors, see [Configuring Warnings in Visual Basic](/visualstudio/ide/configuring-warnings-in-visual-basic).</span></span>  
   
- <span data-ttu-id="9c7c2-110">**오류 ID:** BC42200</span><span class="sxs-lookup"><span data-stu-id="9c7c2-110">**Error ID:** BC42200</span></span>  
+ <span data-ttu-id="f32a6-110">**오류 ID:** BC42200</span><span class="sxs-lookup"><span data-stu-id="f32a6-110">**Error ID:** BC42200</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9c7c2-111">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="9c7c2-111">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="f32a6-111">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="f32a6-111">To correct this error</span></span>  
   
--   <span data-ttu-id="9c7c2-112">재정의되거나 구현된 메서드에 링크 요청을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="9c7c2-112">Add link demands to the overridden and/or implemented methods.</span></span>  
+-   <span data-ttu-id="f32a6-112">재정의되거나 구현된 메서드에 링크 요청을 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="f32a6-112">Add link demands to the overridden and/or implemented methods.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9c7c2-113">참고자료</span><span class="sxs-lookup"><span data-stu-id="9c7c2-113">See also</span></span>
+## <a name="see-also"></a><span data-ttu-id="f32a6-113">참고자료</span><span class="sxs-lookup"><span data-stu-id="f32a6-113">See also</span></span>
 
-- [<span data-ttu-id="9c7c2-114">링크 요청</span><span class="sxs-lookup"><span data-stu-id="9c7c2-114">Link Demands</span></span>](../../framework/misc/link-demands.md)
-- [<span data-ttu-id="9c7c2-115">Demand와 LinkDemand</span><span class="sxs-lookup"><span data-stu-id="9c7c2-115">Demand vs. LinkDemand</span></span>](../../framework/misc/securing-wrapper-code.md#demand-vs-linkdemand)
-- [<span data-ttu-id="9c7c2-116">보안 최적화</span><span class="sxs-lookup"><span data-stu-id="9c7c2-116">Security Optimizations</span></span>](https://msdn.microsoft.com/library/cf255069-d85d-4de3-914a-e4625215a7c0)
+- [<span data-ttu-id="f32a6-114">링크 요청</span><span class="sxs-lookup"><span data-stu-id="f32a6-114">Link Demands</span></span>](../../framework/misc/link-demands.md)
+- [<span data-ttu-id="f32a6-115">Demand와 LinkDemand</span><span class="sxs-lookup"><span data-stu-id="f32a6-115">Demand vs. LinkDemand</span></span>](../../framework/misc/securing-wrapper-code.md#demand-vs-linkdemand)
+- <span data-ttu-id="f32a6-116">[보안 최적화](https://docs.microsoft.com/previous-versions/dotnet/netframework-4.0/ett3th5b(v=vs.100))</span><span class="sxs-lookup"><span data-stu-id="f32a6-116">[Security Optimizations](https://docs.microsoft.com/previous-versions/dotnet/netframework-4.0/ett3th5b(v=vs.100))</span></span>
